--- a/src/renderer/styles/app.css
+++ b/src/renderer/styles/app.css
@@ -33,8 +33,12 @@
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .App-main-no-navbar {
